--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,178 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    font-family: Inter, sans-serif;
+    padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+    
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.container::before{
+
+    content: '';
+    background: url('./images/pexels-brett-sayles-1431822.jpg') no-repeat center center/cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+
+
+.input--Field{
+
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
+    align-items: center;
+    width: 100vw;
+    height: min-content;
+    padding-top: 2%;
+}
+
+.input--Field input{
+    text-align: center;
+    font-size: 1.2rem;
+    padding: 0.5rem 1rem;
+    border-radius: 25px;
+    border: 1px solid rgba(255, 255, 255, 0.8);
+}
+
+.btn-days {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	background-color:#ffffff;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.btn-days:hover {
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	background-color:#f6f6f6;
+}
+.btn-days:active {
+	position:relative;
+	top:1px;
+}
+
+.card--main{
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5%;
+}
+
+.card{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 250px;
+    height: 20rem;
+    color: rgb(25, 25, 25);
+    background-color: rgba(255, 255, 255, 0.6);
+    margin-top: 2%;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    border: solid 0.1rem black;
+    border-radius: 1rem;
+
+}
+
+.card--city{
+
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10%;
+}
+
+.card--city-name{
+
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin-bottom: 2.5%;
+}
+
+.card--city-description{
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.card--info{
+    padding-left: 15%;
+    font-size: 1.5rem;
+}
+
+.days--card{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 5%;
+}
+
+.main--intro{
+    text-align: center;
+    margin-top: 2%;
+    padding-left: 2%;
+}
+
+.main--intro h1{
+
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-size: 2rem;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    color: white;
+    font-weight: 700;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: uppercase;
+    text-shadow: 0px 2px 2px #666666;
+}
+
+
+@media screen and (max-width: 500px){
+
+    .days--card{
+        flex-direction: column;
+        margin: 0;
+    }
+    
+    .container{
+
+        width: 100%;
+        min-height: 100vh;
+        height: fit-content;
+        padding-bottom: 10%;
+    }
+    .input--Field{
+        flex-direction: column;
+        height: fit-content;
+        gap: 0.5rem;
+    }
 }
